@@ -1,3 +1,5 @@
+08/11/09 (Olaf)
+Separated the configuration from the SemanticWebClient class.
 
 07/30/09 (TimP) 
 Fixed warnings from ant and Eclipse. Tagged v0_9_1_for_Jena_2_5_7
